test/files/neg/macro-invalidusage-badargs.check
Macros_Test_2.scala:5: error: type mismatch;
 found   : String("42")
 required: Int
  foo("42")
      ^
Macros_Test_2.scala:6: error: too few argument lists for macro invocation
  foo
  ^
Macros_Test_2.scala:7: error: Int does not take parameters
  foo(4)(2)
        ^
Macros_Test_2.scala:8: error: not enough arguments for macro method foo: (x: Int)Int.
Unspecified value parameter x.
  foo()
     ^
Macros_Test_2.scala:9: error: too many arguments (2) for macro method foo: (x: Int)Int
  foo(4, 2)
         ^
5 errors found
